{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 433,
  "lineage": "510a2a92-74d7-4683-e96b-f9a83ee8dca5",
  "resources": [
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:656859035273:loadbalancer/app/loadbalaner01/1be7a5006653a9d4",
            "arn_suffix": "app/loadbalaner01/1be7a5006653a9d4",
            "desync_mitigation_mode": "defensive",
            "dns_name": "loadbalaner01-889521675.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:656859035273:loadbalancer/app/loadbalaner01/1be7a5006653a9d4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "loadbalaner01",
            "preserve_host_header": false,
            "security_groups": [
              "sg-027c28868bb9ce9c2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0919f44e5698400b7"
              },
              {
                "subnet_id": "subnet-0d0d877efbe9d8201"
              }
            ],
            "subnets": [
              "subnet-0919f44e5698400b7",
              "subnet-0d0d877efbe9d8201"
            ],
            "tags": {
              "Name": "lb01"
            },
            "tags_all": {
              "Name": "lb01"
            },
            "vpc_id": "vpc-04ca98336f3faab69",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.networking_module.aws_security_group.sg02",
            "module.networking_module.aws_subnet.public_subnet01",
            "module.networking_module.aws_subnet.public_subnet02",
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ltn01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:656859035273:listener/app/loadbalaner01/1be7a5006653a9d4/407eac84a64214ea",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:656859035273:targetgroup/target01/5902290247983a60",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:656859035273:listener/app/loadbalaner01/1be7a5006653a9d4/407eac84a64214ea",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:656859035273:loadbalancer/app/loadbalaner01/1be7a5006653a9d4",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_module.aws_lb.lb01",
            "module.loadbalancer_module.aws_lb_target_group.tg01",
            "module.networking_module.aws_security_group.sg02",
            "module.networking_module.aws_subnet.public_subnet01",
            "module.networking_module.aws_subnet.public_subnet02",
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ltn02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:656859035273:listener/app/loadbalaner01/1be7a5006653a9d4/a0ba2669631c88c5",
            "certificate_arn": "arn:aws:acm:ap-southeast-1:656859035273:certificate/1c10e0a9-8d3a-49ab-835f-0c87d5e4d93b",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:656859035273:targetgroup/target01/5902290247983a60",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:656859035273:listener/app/loadbalaner01/1be7a5006653a9d4/a0ba2669631c88c5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:656859035273:loadbalancer/app/loadbalaner01/1be7a5006653a9d4",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_module.aws_lb.lb01",
            "module.loadbalancer_module.aws_lb_target_group.tg01",
            "module.networking_module.aws_security_group.sg02",
            "module.networking_module.aws_subnet.public_subnet01",
            "module.networking_module.aws_subnet.public_subnet02",
            "module.networking_module.aws_vpc.vpc01",
            "module.route53_module.aws_acm_certificate.cert01"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:656859035273:targetgroup/target01/5902290247983a60",
            "arn_suffix": "targetgroup/target01/5902290247983a60",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:656859035273:targetgroup/target01/5902290247983a60",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target01",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04ca98336f3faab69"
          },
          "dependencies": [
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df4455957daad041",
            "domain": "vpc",
            "id": "eipalloc-0df4455957daad041",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-18-142-187-194.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.142.187.194",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "elastic_ip01"
            },
            "tags_all": {
              "Name": "elastic_ip01"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:656859035273:internet-gateway/igw-0bf223a4cf92d39c5",
            "id": "igw-0bf223a4cf92d39c5",
            "owner_id": "656859035273",
            "tags": {
              "Name": "gateway01"
            },
            "tags_all": {
              "Name": "gateway01"
            },
            "vpc_id": "vpc-04ca98336f3faab69"
          },
          "dependencies": [
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:656859035273:route-table/rtb-0cac9082df870d6a5",
            "id": "rtb-0cac9082df870d6a5",
            "owner_id": "656859035273",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bf223a4cf92d39c5",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bf223a4cf92d39c5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ca98336f3faab69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_module.aws_internet_gateway.gw01",
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b87691e037ba708d",
            "route_table_id": "rtb-0cac9082df870d6a5",
            "subnet_id": "subnet-0919f44e5698400b7"
          },
          "dependencies": [
            "module.networking_module.aws_internet_gateway.gw01",
            "module.networking_module.aws_route_table.public",
            "module.networking_module.aws_subnet.public_subnet01",
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00975f57f9bbd122a",
            "route_table_id": "rtb-0cac9082df870d6a5",
            "subnet_id": "subnet-0d0d877efbe9d8201"
          },
          "dependencies": [
            "module.networking_module.aws_internet_gateway.gw01",
            "module.networking_module.aws_route_table.public",
            "module.networking_module.aws_subnet.public_subnet02",
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:656859035273:security-group/sg-02d0644b10ef1a374",
            "description": "Allow web-traffice inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d0644b10ef1a374",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-027c28868bb9ce9c2"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_web-traffic",
            "name_prefix": "",
            "owner_id": "656859035273",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_8080_only_from_loadbalaner"
            },
            "tags_all": {
              "Name": "allow_8080_only_from_loadbalaner"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ca98336f3faab69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_module.aws_security_group.sg02",
            "module.networking_module.aws_vpc.vpc01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:656859035273:security-group/sg-027c28868bb9ce9c2",
            "description": "Allow web-traffice inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-027c28868bb9ce9c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_web-traffic-sg02",
            "name_prefix": "",
            "owner_id": "656859035273",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-80-443"
            },
            "tags_all": {
              "Name": "allow-80-443"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ca98336f3faab69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_module.aws_vpc.vpc01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:656859035273:subnet/subnet-0919f44e5698400b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0919f44e5698400b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "656859035273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet01"
            },
            "tags_all": {
              "Name": "public_subnet01"
            },
            "vpc_id": "vpc-04ca98336f3faab69"
          },
          "dependencies": [
            "module.networking_module.aws_vpc.vpc01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:656859035273:subnet/subnet-0d0d877efbe9d8201",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0d877efbe9d8201",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "656859035273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet02"
            },
            "tags_all": {
              "Name": "public_subnet02"
            },
            "vpc_id": "vpc-04ca98336f3faab69"
          },
          "dependencies": [
            "module.networking_module.aws_vpc.vpc01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:656859035273:vpc/vpc-04ca98336f3faab69",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-00985cf250c6f7bf3",
            "default_route_table_id": "rtb-0371a91741079ea37",
            "default_security_group_id": "sg-00e1f798dfa7594f5",
            "dhcp_options_id": "dopt-bf6c84d9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04ca98336f3faab69",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0371a91741079ea37",
            "owner_id": "656859035273",
            "tags": {
              "Name": "aws_vpc01"
            },
            "tags_all": {
              "Name": "aws_vpc01"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}